--- a/templates/index.html
+++ b/templates/index.html
@@ -17,18 +17,85 @@
 
 
 <body>
+    <style type="text/css">
+        *{margin:0;padding:0;box-sizing:border-box}body,html{height:100%;font-family:Poppins-Regular,sans-serif}a{font-family:Poppins-Regular;font-size:14px;line-height:1.7;color:#666;margin:0;transition:all .4s;-webkit-transition:all .4s;-o-transition:all .4s;-moz-transition:all .4s}a:focus{outline:0!important}a:hover{text-decoration:none}h1,h2,h3,h4,h5,h6{margin:0}input{outline:0;border:none}input:focus::-webkit-input-placeholder{color:transparent}input:focus:-moz-placeholder{color:transparent}input:focus::-moz-placeholder{color:transparent}input:focus:-ms-input-placeholder{color:transparent}input::-webkit-input-placeholder{color:#adadad}input:-moz-placeholder{color:#adadad}input::-moz-placeholder{color:#adadad}input:-ms-input-placeholder{color:#adadad}button{outline:0!important;border:none;background:0 0}button:hover{cursor:pointer}.container{max-width:1200px}.container-contact100{width:100%;min-height:100vh;display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;flex-wrap:wrap;justify-content:center;align-items:center;padding:15px;background:#bda7cf;background:-webkit-linear-gradient(33deg,#86918e,#8d9de4);background:-o-linear-gradient(33deg,#86918e,#8d9de4);background:-moz-linear-gradient(33deg,#86918e,#8d9de4);background:linear-gradient(33deg,#86918e,#8d9de4)}.wrap-contact100{width:500px;background:#fff;border-radius:10px;overflow:hidden;padding:42px 55px 45px 55px}.contact100-form{width:100%}.contact100-form-title{display:block;font-family:Poppins-Bold;font-size:39px;color:#333;line-height:1.2;text-align:center;padding-bottom:10px}.wrap-input100{width:100%;position:relative;border-bottom:2px solid #d9d9d9;padding-bottom:10px;margin-bottom:15px}.input100{display:block;width:100%;background:0 0;font-family:Poppins-Medium;font-size:18px;color:#333;line-height:1.2;padding:0 5px}.focus-input100{position:absolute;display:block;width:100%;height:100%;top:0;left:0;pointer-events:none}.focus-input100::before{content:"";display:block;position:absolute;bottom:-2px;left:0;width:0;height:2px;-webkit-transition:all .4s;-o-transition:all .4s;-moz-transition:all .4s;transition:all .4s;background:#7f7f7f}input.input100{height:40px}.input100:focus+.focus-input100::before{width:100%}.has-val.input100+.focus-input100::before{width:100%}.container-contact100-form-btn{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;flex-wrap:wrap;justify-content:center;padding-top:13px}.wrap-contact100-form-btn{width:100%;display:block;position:relative;z-index:1;border-radius:25px;overflow:hidden;margin:0 auto}.contact100-form-bgbtn{position:absolute;z-index:-1;width:300%;height:100%;background:#a64bf4;background:-webkit-linear-gradient(left,#596d6d,#c5bcf5,#596d6d,#c5bcf5);background:-o-linear-gradient(left,#596d6d,#c5bcf5,#596d6d,#c5bcf5);background:-moz-linear-gradient(left,#596d6d,#c5bcf5,#596d6d,#c5bcf5);background:linear-gradient(left,#596d6d,#c5bcf5,#596d6d,#c5bcf5);top:0;left:-100%;-webkit-transition:all .4s;-o-transition:all .4s;-moz-transition:all .4s;transition:all .4s}.contact100-form-btn{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;justify-content:center;align-items:center;padding:0 20px;width:100%;height:50px;font-family:Poppins-Medium;font-size:16px;color:#fff;line-height:1.2}.wrap-contact100-form-btn:hover .contact100-form-bgbtn{left:0}.contact100-form-btn i{-webkit-transition:all .4s;-o-transition:all .4s;-moz-transition:all .4s;transition:all .4s}.contact100-form-btn:hover i{-webkit-transform:translateX(10px);-moz-transform:translateX(10px);-ms-transform:translateX(10px);-o-transform:translateX(10px);transform:translateX(10px)}@media (max-width:576px){.wrap-contact100{padding:72px 15px 65px 15px}}.wrap-contact100{width:800px;background:#fff;border-radius:10px;overflow:hidden;padding:42px 55px 45px 55px}.contact100-form-title{font-size:26px}
+        </style>
+        
     <div class="container">
         <div class="jumbotron" style="text-align: center">
-            <h1>PROJECT 3: LOAN APPROVAL</h1>
+            <h1>*PROJECT 3: LOAN APPROVAL*</h1>
             <h2>---------------------------------------------------</h2>
             <p>Find Out How Much MONEY YOU CAN GET APPROVED!!!! </p>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-12" style="text-align: center">
                 <h2>NEED A LOAN? GET APPROVED IMMEDIATELY!!!</h2>
                 <div id="plot"></div>
             </div>
+        </div> -->
+
+        
+	<div class="container-contact100">
+		<div class="wrap-contact100">
+			<form class="contact100-form validate-form" action="/action_page.php" >
+				<span class="contact100-form-title" style="font-size:32px">LOAN APPROVAL PREDICTION</span>
+				<span class="contact100-form-title" id="output" style="color: #23e45d;" >&nbsp;</span>
+        
+            
+
+				<div class="wrap-input100 " >
+					<span class="label-input100">Gender</span>
+					<select  class="input100" id="gender" name="gender" style="padding: 10px 5px;margin-top: 15px;border: 2px solid #d9d9d9;" >
+							<option value="">Select Gender</option>
+							<option value="0">Female</option>
+							<option value="1">Male</option>
+						</select>
+					<span class="focus-input100"></span>
+				</div>
+                
+                <div class="wrap-input100" style="border-bottom: 0px;" >
+					<span class="label-input100">Marital Status</span>
+						<select  class="input100" id="religion" name="religion" style="padding: 10px 5px;margin-top: 15px;border: 2px solid #d9d9d9;" >
+							<option value="">Married?</option>
+							<option value="0">No</option>
+							<option value="1">Yes</option> 
+						</select>
+					<span class="focus-input100"></span>
+				</div>
+
+                <div class="wrap-input100" style="border-bottom: 0px;" >
+					<span class="label-input100">Education Status</span>
+						<select  class="input100" id="religion" name="religion" style="padding: 10px 5px;margin-top: 15px;border: 2px solid #d9d9d9;" >
+							<option value="">Graduate?</option>
+							<option value="0">No</option>
+							<option value="1">Yes</option> 
+						</select>
+					<span class="focus-input100"></span>
+				</div>
+
+                <div class="wrap-input100" style="border-bottom: 0px;" >
+					<span class="label-input100">Dependents</span>
+						<select  class="input100" id="religion" name="religion" style="padding: 10px 5px;margin-top: 15px;border: 2px solid #d9d9d9;" >
+							<option value="">Select Number of Dependents</option>
+							<option value="0">1</option>
+							<option value="1">2</option>
+							<option value="2">3+</option>
+						</select>
+					<span class="focus-input100"></span>
+				</div>
+
+
+                <div class="container-contact100-form-btn">
+					<div class="wrap-contact100-form-btn">
+						<div class="contact100-form-bgbtn"></div>
+						<button class="contact100-form-btn" id='submit' type="submit" value="Submit">Submit</button>
+					</div>
+				</div>
+			</form>
+
+
+
         </div>
     </div>
 </body>
